2006-11-06  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/shpgeo.c: Modified SHPProject to use pj_transform() so 
	it works for datums and stuff.  Submitted by Steffen Macke.

2006-09-04  Frank Warmerdam  <warmerdam@pobox.com>

	* shpeopen.c: (MLoskot) Added stronger test of Shapefile reading 
	failures, e.g. truncated files.  The problem was discovered by Tim 
	Sutton and reported here:
	      https://svn.qgis.org/trac/ticket/200

2006-06-17  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: use calloc() for DBFInfo in DBFCreate() to ensure
	all fields initialized to zero if not otherwise mentioned.

	* dbfopen.c: Don't allow creation of string fields with width larger
	than 255 per http://bugzilla.maptools.org/show_bug.cgi?id=1434

2006-06-16  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Don't treat decimals value as high order field length
	for strings, as it causes serious bugs in some cases such as
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1202

	* dbfopen.c: Made static field buffer in DBFReadAttribute() into a
	field in the DBFInfo structure to avoid multi-threading problems.

2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Fixed bug in DBFCloneEmpty() (treating pachFieldType as
	an array of int).

2006-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Changed to put spaces into string fields that are NULL
	as per http://bugzilla.maptools.org/show_bug.cgi?id=316.

2006-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c, shapefil.h, shpdump.c: Added bMeasureIsUsed support as
	per http://bugzilla.maptools.org/show_bug.cgi?id=1249
	
2006-01-04  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c/shapefil.h: Added functions to check if dbf record is
	deleted, and to mark it as deleted.

2005-02-11  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Check panPartStart[0] is 0 in SHPCreateObject().

	* Fixed bug 305 in DBFCloneEmpty() - header length problem.
