@@ -1,3 +1,8 @@
+2007-06-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c: Fix for SHPRewind() for "contact at one vertex" 
+	cases in rings. http://trac.osgeo.org/gdal/ticket/976
+
 2006-11-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* contrib/shpgeo.c: Modified SHPProject to use pj_transform() so 
